визуальная связь между фильтрами

--- a/gnhq.info/web/css/statScreen.css
+++ b/gnhq.info/web/css/statScreen.css
@@ -22,4 +22,4 @@ form label {cursor: pointer;}
 .line-negative {color: red;}
 .line-positive {color: black;}
 
-option.disabled {color: #cccccc;}
+.disabled {color: #cccccc;}
