фильтрация по ТИК на фронтэнде

--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -36,7 +36,7 @@
 					<div>&nbsp;</div>
 					<button class="btn btn-primary">показать</button>
 				</div>
-				<div class="span2">
+				<div class="span3">
 					<div>&nbsp;</div>
 					<div id="violCount">
 						Нарушений: <span class="val"></span>
@@ -54,7 +54,7 @@
 				<div class="tree">
 				</div>
 			</div>
-			<div id="violData" >
+			<div id="violFeed" >
 				<div class="hdr">Лента нарушений:</div>
 				<table style="margin-left: 5px;">
 					<thead>
