--- a/gnhq.info/web/css/statScreen.css
+++ b/gnhq.info/web/css/statScreen.css
@@ -28,6 +28,8 @@ form label {cursor: pointer;}
 
 .val {font-weight: 700;}
 
-#geoTree, #violData {height: 250px; min-height: 250px; max-height: 250px; overflow-x: hidden; overflow-y: scroll;}
-#geoTree .hdr, #violData .hdr {font-weight: 700; margin-bottom: 7px;}
-#geoTree td, #violData td{font-size: 75%; vertical-align: top;}
+#geoTree, #violFeed {height: 250px; min-height: 250px; max-height: 250px; overflow-x: hidden; overflow-y: scroll;}
+#geoTree .hdr, #violFeed .hdr {font-weight: 700; margin-bottom: 7px;}
+#geoTree td, #violFeed td {font-size: 75%; vertical-align: top;}
+#geoTree a, #geoTree a:hover, #geoTree a:active {cursor: hand; cursor: pointer; display: block; padding: 0px 0px 2px 2px;}
+#geoTree a.selected {background-color: #FFA07A;}
