--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -6,14 +6,13 @@
 <title>Гражданин Наблюдатель - Нарушения 4 марта 2012</title>
 </head>
 <body>
-	<div class="container" style="margin-top: 15px; width: 90% !important;">
+	<div class="container" style="margin-top: 5px; width: 90% !important;">
 		<!-- SEARCH FORM -->
-		<form id="filterForm" name="filterForm">
+		<form id="filterForm" name="filterForm" style="margin-bottom: 5px!important;">
 			<div class="row">
-				<div class="span2">
+				<div class="span3">
 					<div>Проект-наблюдатель</div>
-					<select id="ProjectCode" name="ProjectCode" style="width: 160px">
-						<option value="">-- все --</option>
+					<select id="ProjectCode" name="ProjectCode" style="width: 180px; height: 107px;" multiple="multiple" >
 					</select>
 				</div>
 				<div class="span3">
@@ -24,17 +23,13 @@
 				</div>
 				<div class="span3">
 					<div>Регион:</div>
-					<select style="width: 180px" id="regionNum" name="regionNum"></select>
+					<select style="width: 180px" id="regionNum" name="regionNum"><option value="">-- все --</option></select>
 				</div>
 				<div class="span2">
 					<div>Округ:</div>
 					<select id="okrug" name="okrug" style="width: 100px">
 						<option value="">-- все --</option>
 					</select>
-				</div>
-				<div class="span2">
-					<div>&nbsp;</div>
-					<button class="btn btn-primary">показать</button>
 				</div>
 				<div class="span3">
 					<div>&nbsp;</div>
@@ -45,9 +40,8 @@
 			</div>
 
 		</form>
-		<div class="partSeparator hr">&nbsp;</div>
 		<!-- /SEARCH FORM -->
-		<div class="row" style="margin-top: 10px;">
+		<div class="row" style="margin-top: 5px; border-top: 1px solid gray;">
 
 			<div id="geoTree" class="span3">
 				<div class="hdr">по ТИКам:</div>
@@ -86,7 +80,7 @@
 		</div>
 		<div class="modal-footer">
 			<div class="media">
-				
+
 			</div>
 		</div>
 	</div>
