старые экшны убраны в old, модель, шлюз, загрузчик по твиттеру

--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -11,8 +11,8 @@
 		<form id="filterForm" name="filterForm" style="margin-bottom: 5px!important;">
 			<div class="row">
 				<div class="span3">
-					<div>Проект-наблюдатель</div>
-					<select id="ProjectCode" name="ProjectCode" style="width: 180px; height: 107px;" multiple="multiple" >
+					<div title="Для выбора нескольких проектов зажмите Ctrl">Проект-наблюдатель</div>
+					<select title="Для выбора нескольких проектов зажмите Ctrl" id="ProjectCode" name="ProjectCode" style="width: 180px; height: 107px;" multiple="multiple" >
 					</select>
 				</div>
 				<div class="span3">
