--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -65,7 +65,11 @@
 			</div>
 		</div>
 
+		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Лента новостей</h4>
+		<div id="twitterFeed" >
+		</div>
 	</div>
+
 	<div class="modal" id="violationModel" style="display: none;">
 		<div class="modal-header">
 			<a class="close" data-dismiss="modal">×</a>
