--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -15,7 +15,7 @@
 				</div>
 				<div class="span3">
 					<div>Регион:</div>
-					<select style="width: 180px" id="regionNum" name="regionNum"><option value="">-- все --</option></select>
+					<select style="width: 180px" id="regionNum" name="regionNum"><option value="">итого</option></select>
 				</div>
 				<div class="span2">
 					<div>Округ:</div>
