--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -94,12 +94,12 @@
 	<script>
 		var StaticData = {};
 	</script>
-	<script type="text/javascript" src="js/violtypes_data.js"></script>
+	<script type="text/javascript" src="js/violtypes_data.js?1"></script>
 	<script type="text/javascript" src="js/watchers_data.js"></script>
 	<script type="text/javascript" src="js/regions_data.js"></script>
 	<script type="text/javascript" src="js/okrug_data.js"></script>
 	<script type="text/javascript" src="js/tik_data.js"></script>
 	<script type="text/javascript" src="js/decoration.js"></script>
-	<script type="text/javascript" src="js/viol.js"></script>
+	<script type="text/javascript" src="js/viol.js?1"></script>
 </body>
 </html>
