--- a/gnhq.info/web/css/statScreen.css
+++ b/gnhq.info/web/css/statScreen.css
@@ -28,13 +28,21 @@ form label {cursor: pointer;}
 
 #selectedPlace {font-weight: 700;}
 
-#vTypes, #violFeed {height: 350px; min-height: 350px; max-height: 350px; overflow-x: hidden; overflow-y: scroll;}
+#vTypes, #violFeed {height: 400px; min-height: 410px; max-height: 410px; overflow-x: hidden; }
+#vTypes {overflow-y: auto;}
+#violFeed {overflow-y: scroll;}
+
+#violFeed .description {padding-right: 5px;}
+#violFeed {background-color: #F0F0F0;}
 #vTypes .hdr, #violFeed .hdr {font-weight: 700; margin-bottom: 7px;}
-#vTypes td, #violFeed td {font-size: 75%; vertical-align: top;}
+#violFeed .hdr {margin-top: 3px; margin-left: 3px;}
+#vTypes td, #violFeed td {font-size: 75%; vertical-align: top; border: 1px #E0E0E0 solid; border-collapse: collapse;}
 #vTypes .data span.val {float: right; font-weight: 700; padding-right: 40px;}
 
 #violFeed span.vhdr {font-style: italic!important; margin-right: 5px;}
-#violFeed a, #violFeed a:hover {text-decoration: none; border-bottom: 1px dashed #000080; cursor: hand; cursor: pointer;}
+#violTypeAll, #watchersAll, #violFeed a, #violFeed a:hover {
+	text-decoration: none; border-bottom: 1px dashed #000080; cursor: hand; cursor: pointer;
+}
 
 #vTypes .selected {background-color: #FFA07A; }
 
