--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -11,7 +11,7 @@
 		<form id="filterForm" name="filterForm" style="margin-bottom: 5px!important;">
 			<div class="row">
 				<div class="span3" id="watchers">
-					<div >Проект-наблюдатель:</div>
+					<div >Проект-наблюдатель (<a href="javascript:;" id="watchersAll">выбрать все</a>)</div>
 				</div>
 				<div class="span3">
 					<div>Регион:</div>
@@ -45,18 +45,18 @@
 		<div class="row" style="margin-top: 5px; border-top: 1px solid gray;">
 
 			<div id="vTypes" class="span6">
-				<div class="hdr">По типам:</div>
+				<div class="hdr">По типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>)</div>
 				<div class="data"></div>
 			</div>
-			<div id="violFeed">
+			<div id="violFeed" >
 				<div class="hdr">Лента нарушений:</div>
 				<table style="margin-left: 5px; width: 100%;">
 					<thead>
 						<tr>
-							<td style="width: 50px;">Проект</td>
+							<td style="width: 100px;">Проект</td>
 							<td style="width: 80px;">Время</td>
 							<td style="width: 100px;">Место</td>
-							<td>Подробности</td>
+							<td style="margin-right: 3px;">Подробности</td>
 						</tr>
 					</thead>
 					<tbody>
