--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -37,6 +37,8 @@
 					<div id="violCount">
 						Всего нарушений: <span class="val"></span>
 					</div>
+					<br/>
+					<button class="btn btn-primary btn-large">ОБНОВИТЬ</button>
 				</div>
 			</div>
 
