фильтр по участку

--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -47,8 +47,12 @@
 		<div class="row" style="margin-top: 5px; border-top: 1px solid gray;">
 
 			<div id="vTypes" class="span5">
-				<div class="hdr">По типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>)</div>
+				<div class="hdr">Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>)</div>
 				<div class="data"></div>
+				<div class="hdr" style="margin-top: 6px;">Фильтр по УИК </div>
+				<select id="violFeedUikFilter" style="width: 320px;">
+					<option value="">--все--</option>
+				</select>
 			</div>
 			<div id="violFeed" >
 				<div class="hdr">Лента нарушений:</div>
