--- a/gnhq.info/web/tpl/index.phtml
+++ b/gnhq.info/web/tpl/index.phtml
@@ -127,6 +127,8 @@
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/decoration.js"></script>
-	<script type="text/javascript" src="js/statScreen.js?1"></script>
+	<script type="text/javascript" src="js/statScreen.js?2"></script>
+	<script type="text/javascript" src="js/index.js?1"></script>
+
 </body>
 </html>
