--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/statScreen.css" rel="stylesheet">
+<link href="css/statScreen.css?5" rel="stylesheet">
 <title>Гражданин Наблюдатель - Нарушения 4 марта 2012</title>
 </head>
 <body>
@@ -132,13 +132,13 @@
 	<script>
 		var StaticData = {};
 	</script>
-	<script type="text/javascript" src="js/violtypes_data.js?4"></script>
-	<script type="text/javascript" src="js/watchers_data.js"></script>
+	<script type="text/javascript" src="js/violtypes_data.js?5"></script>
+	<script type="text/javascript" src="js/watchers_data.js?5"></script>
 	<script type="text/javascript" src="js/regions_data.js"></script>
 	<script type="text/javascript" src="js/okrug_data.js"></script>
 	<script type="text/javascript" src="js/tik_data.js"></script>
 	<script type="text/javascript" src="js/decoration.js"></script>
-	<script type="text/javascript" src="js/viol.js?4"></script>
-	<script type="text/javascript" src="js/statScreen.js?4"></script>
+	<script type="text/javascript" src="js/viol.js?5"></script>
+	<script type="text/javascript" src="js/statScreen.js?5"></script>
 </body>
 </html>
