--- a/gnhq.info/web/tpl/viol.phtml
+++ b/gnhq.info/web/tpl/viol.phtml
@@ -46,8 +46,8 @@
 		<!-- /SEARCH FORM -->
 		<div class="row" style="margin-top: 5px; border-top: 1px solid gray;">
 
-			<div id="vTypes" class="span5">
-				<div class="hdr">Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>)</div>
+			<div id="vTypes" class="span6">
+				<div class="hdr">Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:;" id="violTypeNone">снять все</a>)</div>
 				<div class="data"></div>
 				<div class="hdr" style="margin-top: 6px;">Фильтр по УИК </div>
 				<select id="violFeedUikFilter" style="width: 320px;">
@@ -132,12 +132,12 @@
 	<script>
 		var StaticData = {};
 	</script>
-	<script type="text/javascript" src="js/violtypes_data.js?5"></script>
-	<script type="text/javascript" src="js/watchers_data.js?5"></script>
+	<script type="text/javascript" src="js/violtypes_data.js?7"></script>
+	<script type="text/javascript" src="js/watchers_data.js?7"></script>
 	<script type="text/javascript" src="js/regions_data.js"></script>
 	<script type="text/javascript" src="js/okrug_data.js"></script>
 	<script type="text/javascript" src="js/decoration.js"></script>
-	<script type="text/javascript" src="js/viol.js?6"></script>
-	<script type="text/javascript" src="js/statScreen.js?5"></script>
+	<script type="text/javascript" src="js/viol.js?7"></script>
+	<script type="text/javascript" src="js/statScreen.js?7"></script>
 </body>
 </html>
