--- a/gnhq.info/web/tpl/violfull.phtml
+++ b/gnhq.info/web/tpl/violfull.phtml
@@ -16,6 +16,8 @@
 				<div class="span3">
 					<div>Регион:</div>
 					<select style="width: 180px" id="regionNum" name="regionNum"><option value="">итого</option></select>
+					<br/>
+					<label><input type="checkbox" id="onlyClean" name="onlyClean" value="1" style="display: inline;"/>Учитывать только "чистые" участки ГН</label>
 				</div>
 				<div class="span2">
 					<div>Округ:</div>
@@ -135,12 +137,12 @@
 	<script>
 		var StaticData = {};
 	</script>
-	<script type="text/javascript" src="js/violtypes_data.js?7"></script>
-	<script type="text/javascript" src="js/watchers_data.js?7"></script>
+	<script type="text/javascript" src="js/violtypes_data.js?8"></script>
+	<script type="text/javascript" src="js/watchers_data.js?8"></script>
 	<script type="text/javascript" src="js/regions_data.js"></script>
 	<script type="text/javascript" src="js/okrug_data.js"></script>
 	<script type="text/javascript" src="js/decoration.js"></script>
-	<script type="text/javascript" src="js/viol.js?7"></script>
-	<script type="text/javascript" src="js/statScreen.js?7"></script>
+	<script type="text/javascript" src="js/viol.js?8"></script>
+	<script type="text/javascript" src="js/statScreen.js?8"></script>
 </body>
 </html>
