--- a/gnhq.info/web/tpl/violfullie.phtml
+++ b/gnhq.info/web/tpl/violfullie.phtml
@@ -1,4 +1,8 @@
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+     "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
+
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -8,53 +12,50 @@
 <body>
 	<div class="container" style="margin-top: 5px; width: 96% !important;">
 		<!-- SEARCH FORM -->
-		<form id="filterForm" name="filterForm" style="margin-bottom: 5px!important;">
-			<table>
+		<form id="filterForm" name="filterForm"
+			style="margin-bottom: 5px !important;">
+			<table style="display: inline;">
 				<tr>
-				<td class="span3" id="watchers" style="width: 300px;">
-					<div >Проект-наблюдатель (<a href="javascript:;" id="watchersAll">выбрать все</a>)</div>
-				</td>
-				<td class="span3">
-					<div>Регион:</div>
-					<select style="width: 180px" id="regionNum" name="regionNum"><option value="">итого</option></select>
-					<br/>
-					<!--
+					<td class="span3" id="watchers" style="width: 300px;"></td>
+					<td class="span3">
+						<div>Регион:</div> <select style="width: 180px" id="regionNum"
+						name="regionNum"><option value="">итого</option>
+					</select> <br /> <!--
 					<label><input type="checkbox" id="onlyClean" name="onlyClean" value="1" style="display: inline;"/> Учитывать только "чистые" участки ГН</label>
 					 -->
-				</td>
-				<td class="span2">
-					<div>Округ:</div>
-					<select id="okrug" name="okrug" style="width: 100px">
-						<option value="">-- все --</option>
+					</td>
+					<td class="span2">
+						<div>Округ:</div> <select id="okrug" name="okrug"
+						style="width: 100px">
+							<option value="">-- все --</option>
 					</select>
-				</td>
-				<td class="span2">
-					<div>УИК:</div>
-					<select id="uikNum" name="uikNum" style="width: 100px">
-						<option value="">-- все --</option>
+					</td>
+					<td class="span2">
+						<div>УИК:</div> <select id="uikNum" name="uikNum"
+						style="width: 100px">
+							<option value="">-- все --</option>
 					</select>
-				</td>
-				<td class="span4">
-					<div id="selectedPlace"></div>
-					<div id="uikCount">
-						Всего участков: <span class="val"></span>
-					</div>
-					<div id="violCount">
-						Всего нарушений: <span class="val"></span>
-					</div>
-					<br/>
-					<button class="btn btn-primary btn-large">ОБНОВИТЬ</button>
-				</td>
-			</tr>
+					</td>
+					<td class="span4">
+						<div id="selectedPlace"></div>
+						<div id="uikCount">
+							Всего участков: <span class="val"></span>
+						</div>
+						<div id="violCount">
+							Всего нарушений: <span class="val"></span>
+						</div> <br />
+						<button class="btn btn-primary btn-large">ОБНОВИТЬ</button>
+					</td>
+				</tr>
 			</table>
-
 		</form>
 
 		<!-- /SEARCH FORM -->
 
 		<!-- RESULTS -->
 
-		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Предварительные результаты</h4>
+		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Предварительные
+			результаты</h4>
 		<table class="table table-striped" id="results">
 			<thead>
 				<tr>
@@ -65,34 +66,44 @@
 				</tr>
 			</thead>
 			<tbody>
-				<?php
-				    foreach($view->diagRows as $line) {
-				        include('protocolline.phtml');
-				    }
-				    unset($line);
-				 ?>
-				 <tr>
-				 	<td>Всего участков</td>
-				 	<td colspan="2" id="watchersUikCount" style="font-weight: 700;"></td>
-				 	<td colspan="2" id="ofUikCount" style="font-weight: 700;"></td>
-				 	<td> </td>
-				 </tr>
+
+
+
+
+
+			<?php
+			foreach($view->diagRows as $line) {
+			    include('protocolline.phtml');
+			}
+			unset($line);
+			?>
+				<tr>
+					<td>Всего участков</td>
+					<td colspan="2" id="watchersUikCount" style="font-weight: 700;"></td>
+					<td colspan="2" id="ofUikCount" style="font-weight: 700;"></td>
+					<td></td>
+				</tr>
 			</tbody>
 		</table>
 		<!-- /RESULTS -->
 
 
-		<div class="row" style="margin-top: 5px; border-top: 1px solid gray; display: none;">
+		<div class="row"
+			style="margin-top: 5px; border-top: 1px solid gray; display: none;">
 
 			<div id="vTypes" class="span6">
-				<div class="hdr">Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:;" id="violTypeNone">снять все</a>)</div>
+				<div class="hdr">
+					Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать
+						все</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:;"
+						id="violTypeNone">снять все</a>)
+				</div>
 				<div class="data"></div>
-				<div class="hdr" style="margin-top: 6px;">Фильтр по УИК </div>
+				<div class="hdr" style="margin-top: 6px;">Фильтр по УИК</div>
 				<select id="violFeedUikFilter" style="width: 320px;">
 					<option value="">--все--</option>
 				</select>
 			</div>
-			<div id="violFeed" >
+			<div id="violFeed">
 				<div class="hdr">Лента нарушений:</div>
 				<table id="violFeedTable" style="margin-left: 5px; width: 100%;">
 					<thead>
@@ -111,9 +122,9 @@
 			</div>
 		</div>
 
-		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Лента новостей</h4>
-		<div id="twitterFeed" >
-		</div>
+		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Лента
+			новостей</h4>
+		<div id="twitterFeed"></div>
 
 	</div>
 
@@ -123,16 +134,24 @@
 			<h3 class="place"></h3>
 		</div>
 		<div class="modal-body">
-			<p class="violationType"><u>Тип нарушения</u>: <span></span></p>
-			<p class="description"><u>Описание</u>: <span></span></p>
-			<p class="hqcomment"><u>Комментарий штаба</u>: <span></span></p>
-			<p class="mobilegroup"><u>Мобильная группа</u>: <span></span></p>
-			<p class="police"><u>Полиция</u>: <span></span></p>
+			<p class="violationType">
+				<u>Тип нарушения</u>: <span></span>
+			</p>
+			<p class="description">
+				<u>Описание</u>: <span></span>
+			</p>
+			<p class="hqcomment">
+				<u>Комментарий штаба</u>: <span></span>
+			</p>
+			<p class="mobilegroup">
+				<u>Мобильная группа</u>: <span></span>
+			</p>
+			<p class="police">
+				<u>Полиция</u>: <span></span>
+			</p>
 		</div>
 		<div class="modal-footer">
-			<div class="media">
-
-			</div>
+			<div class="media"></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
