--- a/gnhq.info/web/tpl/violfull.phtml
+++ b/gnhq.info/web/tpl/violfull.phtml
@@ -9,6 +9,10 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/statScreen.css?5" rel="stylesheet">
+
+
+
+
 <?php
 if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
     echo '<link href="css/statScreenIe.css?5" rel="stylesheet">';
@@ -20,30 +24,46 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 <body>
 	<div class="container" style="margin-top: 5px; width: 96% !important;">
 		<!-- SEARCH FORM -->
-		<form id="filterForm" name="filterForm" style="margin-bottom: 5px!important;">
+		<form id="filterForm" name="filterForm"
+			style="margin-bottom: 5px !important;">
 			<div class="row">
 				<div class="span3" id="watchers">
-					<div >Проект-наблюдатель (<a href="javascript:;" id="watchersAll">выбрать все</a>)</div>
+					<div>
+						Проект-наблюдатель (<a href="javascript:;" id="watchersAll">выбрать
+							все</a>)
+					</div>
 				</div>
-				<div class="span3">
-					<div>Регион:</div>
-					<select style="width: 180px" id="regionNum" name="regionNum"><option value="">итого</option></select>
-					<br/>
-					<!--
-					<label><input type="checkbox" id="onlyClean" name="onlyClean" value="1" style="display: inline;"/> Учитывать только "чистые" участки ГН</label>
-					 -->
-				</div>
-				<div class="span2">
-					<div>Округ:</div>
-					<select id="okrug" name="okrug" style="width: 100px">
-						<option value="">-- все --</option>
-					</select>
-				</div>
-				<div class="span2">
-					<div>УИК:</div>
-					<select id="uikNum" name="uikNum" style="width: 100px">
-						<option value="">-- все --</option>
-					</select>
+				<div class="span8">
+					<div class="row">
+						<div class="span3">
+							<div>Регион:</div>
+							<select style="width: 180px" id="regionNum" name="regionNum"><option
+									value="">итого</option>
+							</select>
+						</div>
+						<div class="span2">
+							<div>Округ:</div>
+							<select id="okrug" name="okrug" style="width: 100px">
+								<option value="">-- все --</option>
+							</select>
+						</div>
+						<div class="span2">
+							<div>УИК:</div>
+							<select id="uikNum" name="uikNum" style="width: 100px">
+								<option value="">-- все --</option>
+							</select>
+						</div>
+					</div>
+					<div class="row">
+						<div class="span7">
+							<div><label><input type="checkbox" id="onlyClean" name="onlyClean"
+								value="1" style="display: inline;" /> Учитывать только "чистые"
+								участки ГН</label></div>
+							<div><label><input type="checkbox" id="onlyControlRel" name="onlyControlRel"
+								value="1" style="display: inline;" /> Учитывать только участки без расхождений
+								</label></div>
+						</div>
+					</div>
 				</div>
 				<div class="span4">
 					<div id="selectedPlace"></div>
@@ -53,7 +73,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 					<div id="violCount">
 						Всего нарушений: <span class="val"></span>
 					</div>
-					<br/>
+					<br />
 					<button class="btn btn-primary btn-large">ОБНОВИТЬ</button>
 				</div>
 			</div>
@@ -64,7 +84,8 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 
 		<!-- RESULTS -->
 
-		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Предварительные результаты</h4>
+		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Предварительные
+			результаты</h4>
 		<table class="table table-striped" id="results">
 			<thead>
 				<tr>
@@ -75,18 +96,20 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 				</tr>
 			</thead>
 			<tbody>
-				<?php
-				    foreach($view->diagRows as $line) {
-				        include('protocolline.phtml');
-				    }
-				    unset($line);
-				 ?>
-				 <tr>
-				 	<td>Всего участков</td>
-				 	<td colspan="2" id="watchersUikCount" style="font-weight: 700;"></td>
-				 	<td colspan="2" id="ofUikCount" style="font-weight: 700;"></td>
-				 	<td> </td>
-				 </tr>
+
+
+			<?php
+			foreach($view->diagRows as $line) {
+			    include('protocolline.phtml');
+			}
+			unset($line);
+			?>
+				<tr>
+					<td>Всего участков</td>
+					<td colspan="2" id="watchersUikCount" style="font-weight: 700;"></td>
+					<td colspan="2" id="ofUikCount" style="font-weight: 700;"></td>
+					<td></td>
+				</tr>
 			</tbody>
 		</table>
 		<!-- /RESULTS -->
@@ -95,14 +118,18 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 		<div class="row" style="margin-top: 5px; border-top: 1px solid gray;">
 
 			<div id="vTypes" class="span6">
-				<div class="hdr">Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать все</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:;" id="violTypeNone">снять все</a>)</div>
+				<div class="hdr">
+					Фильтр по типам (<a href="javascript:;" id="violTypeAll">выбрать
+						все</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:;"
+						id="violTypeNone">снять все</a>)
+				</div>
 				<div class="data"></div>
-				<div class="hdr" style="margin-top: 6px;">Фильтр по УИК </div>
+				<div class="hdr" style="margin-top: 6px;">Фильтр по УИК</div>
 				<select id="violFeedUikFilter" style="width: 320px;">
 					<option value="">--все--</option>
 				</select>
 			</div>
-			<div id="violFeed" >
+			<div id="violFeed">
 				<div class="hdr">Лента нарушений:</div>
 				<table id="violFeedTable" style="margin-left: 5px; width: 100%;">
 					<thead>
@@ -121,9 +148,9 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 			</div>
 		</div>
 
-		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Лента новостей</h4>
-		<div id="twitterFeed" >
-		</div>
+		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Лента
+			новостей</h4>
+		<div id="twitterFeed"></div>
 
 	</div>
 
@@ -133,16 +160,24 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 			<h3 class="place"></h3>
 		</div>
 		<div class="modal-body">
-			<p class="violationType"><u>Тип нарушения</u>: <span></span></p>
-			<p class="description"><u>Описание</u>: <span></span></p>
-			<p class="hqcomment"><u>Комментарий штаба</u>: <span></span></p>
-			<p class="mobilegroup"><u>Мобильная группа</u>: <span></span></p>
-			<p class="police"><u>Полиция</u>: <span></span></p>
+			<p class="violationType">
+				<u>Тип нарушения</u>: <span></span>
+			</p>
+			<p class="description">
+				<u>Описание</u>: <span></span>
+			</p>
+			<p class="hqcomment">
+				<u>Комментарий штаба</u>: <span></span>
+			</p>
+			<p class="mobilegroup">
+				<u>Мобильная группа</u>: <span></span>
+			</p>
+			<p class="police">
+				<u>Полиция</u>: <span></span>
+			</p>
 		</div>
 		<div class="modal-footer">
-			<div class="media">
-
-			</div>
+			<div class="media"></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
