--- a/gnhq.info/web/tpl/violfull.phtml
+++ b/gnhq.info/web/tpl/violfull.phtml
@@ -56,7 +56,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 					</div>
 					<div class="row">
 						<div class="span7">
-							<div><label><input type="checkbox" id="onlyClean" name="onlyClean"
+							<div style="display: none;"><label><input type="checkbox" id="onlyClean" name="onlyClean"
 								value="1" style="display: inline;" /> Учитывать только "чистые"
 								участки ГН</label></div>
 							<div><label><input type="checkbox" id="onlyControlRel" name="onlyControlRel"
