--- a/gnhq.info/web/tpl/violfull.phtml
+++ b/gnhq.info/web/tpl/violfull.phtml
@@ -37,8 +37,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 					<div class="row">
 						<div class="span3">
 							<div>Регион:</div>
-							<select style="width: 180px" id="regionNum" name="regionNum"><option
-									value="">итого</option>
+							<select style="width: 180px" id="regionNum" name="regionNum">
 							</select>
 						</div>
 						<div class="span2">
