--- a/gnhq.info/web/tpl/violfull.phtml
+++ b/gnhq.info/web/tpl/violfull.phtml
@@ -38,6 +38,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 						<div class="span3">
 							<div>Регион:</div>
 							<select style="width: 180px" id="regionNum" name="regionNum">
+								<option value="">-- средневзвешенное по России --</option>
 							</select>
 						</div>
 						<div class="span5">
