средневзвешенное без Москвы

--- a/gnhq.info/web/tpl/violfull.phtml
+++ b/gnhq.info/web/tpl/violfull.phtml
@@ -40,6 +40,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 							<div>Регион:</div>
 							<select style="width: 180px" id="regionNum" name="regionNum">
 								<option value="">-- средневзвешенное по России --</option>
+								<option value="-77">-- средневзвешенное без Москвы --</option>
 							</select>
 						</div>
 						<div class="span5">
