--- a/gnhq.info/web/tpl/fullnoprojectsplit.phtml
+++ b/gnhq.info/web/tpl/fullnoprojectsplit.phtml
@@ -20,9 +20,11 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 </head>
 <body>
 	<div class="container" style="margin-top: 5px; width: 96% !important;">
+	    <h4 style="padding-bottom: 10px; margin-bottom: 5px;"><?php echo $view->electionsName;?></h4>
+
 		<!-- SEARCH FORM -->
 		<form id="filterForm" name="filterForm"
-			style="margin-bottom: 5px !important;">
+			style="margin-bottom: 5px !important; <?php if (!$SHOW_RESULTS) echo 'display: none;';?>">
 			<div class="row">
 				<div class="span3" id="watchers" style="display: none;">
 					<div>
@@ -80,9 +82,9 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 		<!-- /SEARCH FORM -->
 
 		<!-- RESULTS -->
-		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Предварительные
+		<h4 style="margin-top: 5px; border-top: 1px solid gray; <?php if (!$SHOW_RESULTS) echo 'display: none;';?>">Предварительные
 			результаты</h4>
-		<table class="table table-striped" id="results">
+		<table class="table table-striped" id="results" style="<?php if (!$SHOW_RESULTS) echo 'display: none;';?>">
 			<thead>
 				<tr>
 					<th width="15%"></th>
