--- a/gnhq.info/web/tpl/fullnoprojectsplit.phtml
+++ b/gnhq.info/web/tpl/fullnoprojectsplit.phtml
@@ -146,7 +146,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 		</div>
 
 		<h4 style="margin-top: 5px; border-top: 1px solid gray;">Лента
-			новостей</h4>
+			новостей (twitter)</h4>
 		<div id="twitterFeed"></div>
 
 	</div>
